# dolphin

./: .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/src/: benchUtils.h  memoryBench.cu
benchmark/src/mvm/: MVMBench.cu
inc/: Dolphin  traits.h
inc/dol_api/: VectorType.h  config.h  function.h  memory.h  operator.h  reduce.h
inc/dol_api/centroid/: SHCentroid.h
inc/dol_api/copy/: deviceCopy.h
inc/dol_api/frame/: FrameHandler.h  FramePosition.h
inc/dol_api/mvm/: MVM.h  MVMHandle.h  MVMProcessing.h
src/: void.cu
test/: CMakeLists.txt
test/src/: VectorTypeTest.cu  cublasUtils.h  memoryTest.cu  reduceTest.cu  testUtils.h
test/src/mvm/: MVMTest.cu
